# ai-web-project

./: .env.example  .gitignore  Project.md  README.md  start_public.sh  stop_public.sh  本地启动项目.md
backend/: Makefile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/services/: ai.py  auth.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  Chat.tsx  api.ts
infra/: docker-compose.yml
infra/min-prod/: Caddyfile
