[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "openai==1.*",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "pymilvus==2.*",
    "python-dotenv>=1.2.1",
    "redis>=7.0.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
